# english-assistant-server

./: .cursorrules  .env  .env.example  .gitignore  Cargo.toml
config/: default.yaml
migrations/: V3__vocabulary_query_tables.sql  init.sql
src/: config.rs  main.rs  routes.rs
src/api/: mod.rs
src/api/dto/: mod.rs  model_dto.rs  response.rs  textbook_dto.rs  unit_dto.rs  unit_word_dto.rs
src/api/handler/: grade_handler.rs  handler_trait.rs  mod.rs  model_provider_handler.rs  semester_handler.rs  system_config_handler.rs  textbook_handler.rs  textbook_version_handler.rs  unit_handler.rs  word_handler.rs  word_unit_handler.rs
src/api/routes/: mod.rs  route_macros.rs
src/app/: handler_factory.rs  mod.rs  redis_factory.rs  repository_factory.rs  request_logger.rs  service_container.rs
src/common/: mod.rs
src/common/errors/: conversion_error.rs  mod.rs
src/common/utils/: response.rs
src/config/: app_config.rs  app_state.rs  cache_keys.rs  database.rs  llm_config.rs  mod.rs  settings.rs
src/domain/: mod.rs
src/domain/models/: grade.rs  mod.rs  model_provider.rs  semester.rs  textbook.rs  unit.rs  word_unit_mapping.rs
src/domain/services/: mod.rs
src/handlers/: grade_handler.rs  mod.rs  semester_handler.rs  textbook_handler.rs  textbook_version_handler.rs  unit_handler.rs  user_handler.rs  word_handler.rs  word_unit_mapping_handler.rs
src/handlers/grade/: handler.rs  mod.rs  routes.rs
src/handlers/semester/: handler.rs  mod.rs  routes.rs
src/handlers/textbook/: handler.rs  mod.rs  routes.rs
src/handlers/textbook_version/: handler.rs  mod.rs  routes.rs
src/handlers/unit/: handler.rs  (+2 more)
src/infrastructure/: mod.rs
src/models/: TextbookVersion.rs  grade.rs  mod.rs  response.rs  textbook.rs  user.rs  word.rs
src/repositories/: mod.rs  textbook_repository.rs  textbook_version_repository.rs  unit_repository.rs  word_repository.rs  word_unit_mapping_repository.rs
src/services/: grade_service.rs  mod.rs  semester_service.rs  textbook_service.rs  textbook_version_service.rs  unit_service.rs  user_service.rs  word_service.rs  word_unit_mapping_service.rs
src/utils/: logger.rs
(+88 files in other folders)
