[package]
name = "english_assistant_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3"
tokio = { version = "1.28", features = ["full"] }
sqlx = { version = "0.8.0", features = ["runtime-tokio-rustls", "postgres", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
serde_yaml = "0.9"
config = "0.14.0"
time = { version = "0.3", features = ["serde"] }
reqwest = "0.12.5"
actix-cors = "0.6"