[package]
name = "english_assistant_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3"
tokio = { version = "1.28", features = ["full"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
time = { version = "0.3", features = ["serde"] }
reqwest = { version = "0.12.5", features = ["json"] }
actix-cors = "0.6"
log = "0.4"
chrono = "0.4"  # 用于生成日志文件名
anyhow = "1.0"  # 错误处理
once_cell = "1.18"
flexi_logger = "0.25"
tracing = { version = "0.1.41", features = ["log"]}
deepseek-api-client = "0.1.1"
async-trait = "0.1.83"
redis = "0.21.4"
thiserror = "2.0.9"
dashmap = "6.1.0"
lazy_static = "1.5.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
chrono-tz = "0.6"
tracing-appender = "0.2"